created createCardElement. recieving net err from local host

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     
 </head>
 <body>
-    
+    <div id="class-card">
+
+    </div>
+    <ul> id="dndClassList class="classList 
+
+    </ul>
 </body>
 </html>
