div function that creates a card div with a front and back div inside

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     
 </head>
 <body>
-    <div id="class-card">
+       <div id="container">
 
     </div>
-    <ul> id="dndClassList class="classList 
-
-    </ul>
 </body>
 </html>
