added h1 to html. needs to be centered on page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
 </head>
 <body>
+    <h1>DND Class Previewer <style> </style></h1>
     <label for="level-select">Select a level:</label>
     <select name="" id="level-select">
         <option value="1">Level 1</option>
