centered h1. adjusting css.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     
 </head>
 <body>
-    <h1>DND Class Previewer <style> </style></h1>
+    <center>
+        <h1>
+            DND Class Previewer
+    </h1>
+</center>
     <label for="level-select">Select a level:</label>
     <select name="" id="level-select">
         <option value="1">Level 1</option>
@@ -36,6 +40,7 @@
         <option value="20">Level 20</option>
     </select>
     <div id="container">
+        <div id="card-container"></div>
 
     </div>
 </body>
