--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             DND Class Previewer
     </h1>
 </center>
-    <label for="level-select">Select a level:</label>
+    <center><label for="level-select">Select a level:</label>
     <select name="" id="level-select">
         <option value="1">Level 1</option>
         <option value="2">Level 2</option>
@@ -38,9 +38,8 @@
         <option value="18">Level 18</option>
         <option value="19">Level 19</option>
         <option value="20">Level 20</option>
-    </select>
-    <div id="container">
-        <div id="card-container"></div>
+    </select></center>
+    <div id="container" class="container">
 
     </div>
 </body>
